# neuropixels_visualisation

./: .gitignore  README.md  pyproject.toml  understand_sorting_output.py
neuropixels_visualisation/: config.py  spikesorting.py
neuropixels_visualisation/helpers/: extract_helpers.py  helpers_spikesorting_scripts.py  neural_analysis_helpers.py  npyx_metadata_fct.py
neuropixels_visualisation/helpers/util/: plotting.py
neuropixels_visualisation/io/: helpers_io.py  phynpxlio.py  phynpxlrawio.py  phyrawio.py  phywarpio.py  phywarprawio.py
scripts/: Test_UnitMatch.py  behaviorAnalysis.py  concatenated_spikesorted_analysis.py  plot_psths.py  singleSession_spikesorted_analysis.py  spikesort_concatenated.py  spikesort_folder.py  spikesort_session.py  understand_sorting_output.py
tests/: run_toy_sorter.py
