[tool.poetry]
name = "neuropixels-visualisation"
version = "0.1.0"
description = ""
authors = ["JulesLebert <lebert.jules@gmail.com>"]
readme = "README.md"
packages = [{include = "neuropixels_visualization"}]

[tool.poetry.dependencies]
python = "^3.11"
spikeinterface = "^0.100.6"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
